--- a/src/output.css
+++ b/src/output.css
@@ -833,6 +833,10 @@ video {
   height: 14px;
 }
 
+.h-\[280px\] {
+  height: 280px;
+}
+
 .h-\[2px\] {
   height: 2px;
 }
@@ -867,6 +871,10 @@ video {
 
 .h-\[60px\] {
   height: 60px;
+}
+
+.h-\[75px\] {
+  height: 75px;
 }
 
 .h-\[calc\(100vh-90px\)\] {
@@ -962,6 +970,10 @@ video {
   width: 29%;
 }
 
+.w-\[33\%\] {
+  width: 33%;
+}
+
 .w-\[42\%\] {
   width: 42%;
 }
@@ -976,6 +988,10 @@ video {
 
 .w-\[60px\] {
   width: 60px;
+}
+
+.w-\[75px\] {
+  width: 75px;
 }
 
 .w-\[77\%\] {
@@ -1062,6 +1078,12 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .auto-rows-fr {
@@ -1248,12 +1270,21 @@ video {
   border-width: 3px;
 }
 
+.border-\[5px\] {
+  border-width: 5px;
+}
+
 .border-l {
   border-left-width: 1px;
 }
 
 .border-t-\[1px\] {
   border-top-width: 1px;
+}
+
+.border-\[\#22bfa5\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 191 165 / var(--tw-border-opacity, 1));
 }
 
 .border-\[\#676767\] {
@@ -1279,6 +1310,16 @@ video {
 .border-\[\#e5e7eb\] {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#fc5185\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(252 81 133 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#2bc48a\] {
@@ -1635,6 +1676,10 @@ video {
   font-size: 17px;
 }
 
+.text-\[19px\] {
+  font-size: 19px;
+}
+
 .text-\[20px\] {
   font-size: 20px;
 }
@@ -1754,6 +1799,11 @@ video {
   color: rgb(28 36 52 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#1f2937\] {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\#212529\] {
   --tw-text-opacity: 1;
   color: rgb(33 37 41 / var(--tw-text-opacity, 1));
@@ -1834,6 +1884,11 @@ video {
   color: rgb(148 163 200 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#9ca3af\] {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\#A271F2\] {
   --tw-text-opacity: 1;
   color: rgb(162 113 242 / var(--tw-text-opacity, 1));
@@ -1881,6 +1936,12 @@ video {
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.shadow-\[0_4px_8px_5px_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
+  --tw-shadow: 0 4px 8px 5px rgba(0,0,0,0.1);
+  --tw-shadow-colored: 0 4px 8px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-\[0_5px_15px_0\] {
@@ -1943,6 +2004,75 @@ video {
   color: rgb(103 103 103 / var(--tw-text-opacity, 1));
 }
 
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:left-1\/2::before {
+  content: var(--tw-content);
+  left: 50%;
+}
+
+.before\:top-\[40\%\]::before {
+  content: var(--tw-content);
+  top: 40%;
+}
+
+.before\:-translate-x-1\/2::before {
+  content: var(--tw-content);
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:-translate-y-1\/2::before {
+  content: var(--tw-content);
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:text-sm::before {
+  content: var(--tw-content);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.before\:font-bold::before {
+  content: var(--tw-content);
+  font-weight: 700;
+}
+
+.before\:text-white::before {
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.before\:opacity-0::before {
+  content: var(--tw-content);
+  opacity: 0;
+}
+
+.before\:content-\[\'\2714\'\]::before {
+  --tw-content: '✔';
+  content: var(--tw-content);
+}
+
+.checked\:border-\[\#A271F2\]:checked {
+  --tw-border-opacity: 1;
+  border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
+}
+
+.checked\:bg-\[\#a99ac1\]:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(169 154 193 / var(--tw-bg-opacity, 1));
+}
+
+.checked\:before\:opacity-100:checked::before {
+  content: var(--tw-content);
+  opacity: 1;
+}
+
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -1964,6 +2094,11 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
+.hover\:border-\[\#A271F2\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
+}
+
 .hover\:border-\[\#a271f2\]:hover {
   --tw-border-opacity: 1;
   border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
@@ -1972,6 +2107,11 @@ video {
 .hover\:bg-\[\#7d3be2\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(125 59 226 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-\[\#E9D8FD\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 216 253 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-\[\#a271f2\]:hover {
@@ -2038,6 +2178,12 @@ video {
 .hover\:shadow-gray-400:hover {
   --tw-shadow-color: #9ca3af;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.active\:scale-95:active {
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .active\:bg-\[\#6829c7\]:active {
