--- a/src/output.css
+++ b/src/output.css
@@ -598,6 +598,14 @@ video {
   top: 0px;
 }
 
+.left-\[5px\] {
+  left: 5px;
+}
+
+.left-\[2px\] {
+  left: 2px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -825,6 +833,10 @@ video {
   height: 100%;
 }
 
+.h-\[100px\] {
+  height: 100px;
+}
+
 .h-\[10px\] {
   height: 10px;
 }
@@ -873,10 +885,6 @@ video {
   height: 60px;
 }
 
-.h-\[75px\] {
-  height: 75px;
-}
-
 .h-\[calc\(100vh-90px\)\] {
   height: calc(100vh - 90px);
 }
@@ -888,6 +896,22 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-3\.5 {
+  height: 0.875rem;
+}
+
+.h-\[25\] {
+  height: 25;
+}
+
+.h-\[25px\] {
+  height: 25px;
+}
+
+.h-\[20px\] {
+  height: 20px;
 }
 
 .min-h-\[130px\] {
@@ -932,6 +956,10 @@ video {
 
 .w-\[100\%\] {
   width: 100%;
+}
+
+.w-\[100px\] {
+  width: 100px;
 }
 
 .w-\[10px\] {
@@ -990,10 +1018,6 @@ video {
   width: 60px;
 }
 
-.w-\[75px\] {
-  width: 75px;
-}
-
 .w-\[77\%\] {
   width: 77%;
 }
@@ -1004,6 +1028,22 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-3\.5 {
+  width: 0.875rem;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[20px\] {
+  width: 20px;
+}
+
+.min-w-\[50px\] {
+  min-width: 50px;
 }
 
 .max-w-2xl {
@@ -1073,6 +1113,10 @@ video {
 
 .translate-x-\[300\%\] {
   --tw-translate-x: 300%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1254,6 +1298,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-\[\] {
+  border-radius: ;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1270,21 +1318,12 @@ video {
   border-width: 3px;
 }
 
-.border-\[5px\] {
-  border-width: 5px;
-}
-
 .border-l {
   border-left-width: 1px;
 }
 
 .border-t-\[1px\] {
   border-top-width: 1px;
-}
-
-.border-\[\#22bfa5\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(34 191 165 / var(--tw-border-opacity, 1));
 }
 
 .border-\[\#676767\] {
@@ -1310,11 +1349,6 @@ video {
 .border-\[\#e5e7eb\] {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
-}
-
-.border-\[\#fc5185\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(252 81 133 / var(--tw-border-opacity, 1));
 }
 
 .border-gray-400 {
@@ -1394,6 +1428,20 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[gray-500\] {
+  background-color: gray-500;
 }
 
 .bg-opacity-75 {
@@ -1477,6 +1525,10 @@ video {
 
 .p-\[23px\] {
   padding: 23px;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-1 {
@@ -1971,6 +2023,16 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.shadow-\[\] {
+  --tw-shadow-color: ;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[5\#a271f2\] {
+  --tw-shadow-color: 5#a271f2;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1992,6 +2054,10 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 .placeholder\:text-\[\#676767\]::-moz-placeholder {
@@ -2053,9 +2119,33 @@ video {
   opacity: 0;
 }
 
+.before\:content-\[\'q\'\]::before {
+  --tw-content: 'q';
+  content: var(--tw-content);
+}
+
 .before\:content-\[\'\2714\'\]::before {
   --tw-content: '✔';
   content: var(--tw-content);
+}
+
+.before\:content-\[\'\@\'\]::before {
+  --tw-content: '@';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'\2713\'\]::before {
+  --tw-content: '✓';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\]::before {
+  --tw-content: ;
+  content: var(--tw-content);
+}
+
+.checked\:right-\[2px\]:checked {
+  right: 2px;
 }
 
 .checked\:border-\[\#A271F2\]:checked {
@@ -2066,6 +2156,11 @@ video {
 .checked\:bg-\[\#a99ac1\]:checked {
   --tw-bg-opacity: 1;
   background-color: rgb(169 154 193 / var(--tw-bg-opacity, 1));
+}
+
+.checked\:bg-\[\#a271f2\]:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(162 113 242 / var(--tw-bg-opacity, 1));
 }
 
 .checked\:before\:opacity-100:checked::before {
@@ -2180,6 +2275,227 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.checked\:hover\:bg-red-600:hover:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
+}
+
+.checked\:hover\:shadow:hover:checked {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-md:hover:checked {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[5px_5px_15px_\#a271f2\]:hover:checked {
+  --tw-shadow: 5px 5px 15px #a271f2;
+  --tw-shadow-colored: 5px 5px 15px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[5px_5px_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 5px 5px 2px #a271f2;
+  --tw-shadow-colored: 5px 5px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[5px_1px_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 5px 1px 2px #a271f2;
+  --tw-shadow-colored: 5px 1px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[1px_5px_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 1px 5px 2px #a271f2;
+  --tw-shadow-colored: 1px 5px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0px_5px_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0px 5px 2px #a271f2;
+  --tw-shadow-colored: 0px 5px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0px_0px_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0px 0px 2px #a271f2;
+  --tw-shadow-colored: 0px 0px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0px_0px_20px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0px 0px 20px #a271f2;
+  --tw-shadow-colored: 0px 0px 20px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0px_0px_5px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0px 0px 5px #a271f2;
+  --tw-shadow-colored: 0px 0px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[10px_0px_5px_\#a271f2\]:hover:checked {
+  --tw-shadow: 10px 0px 5px #a271f2;
+  --tw-shadow-colored: 10px 0px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[10px_10px_5px_\#a271f2\]:hover:checked {
+  --tw-shadow: 10px 10px 5px #a271f2;
+  --tw-shadow-colored: 10px 10px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[-10px_10px_5px_\#a271f2\]:hover:checked {
+  --tw-shadow: -10px 10px 5px #a271f2;
+  --tw-shadow-colored: -10px 10px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0px_10px_5px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0px 10px 5px #a271f2;
+  --tw-shadow-colored: 0px 10px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_10px_5px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 10px 5px #a271f2;
+  --tw-shadow-colored: 0 10px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_5px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 5px #a271f2;
+  --tw-shadow-colored: 0 0 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 px #a271f2;
+  --tw-shadow-colored: 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 2px #a271f2;
+  --tw-shadow-colored: 0 0 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_2px__\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 2px  #a271f2;
+  --tw-shadow-colored: 0 0 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_2px_10px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 2px 10px #a271f2;
+  --tw-shadow-colored: 0 0 2px 10px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_2px_1px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 2px 1px #a271f2;
+  --tw-shadow-colored: 0 0 2px 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_2px_4px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 2px 4px #a271f2;
+  --tw-shadow-colored: 0 0 2px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_2px_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 2px 2px #a271f2;
+  --tw-shadow-colored: 0 0 2px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_15px_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 15px 2px #a271f2;
+  --tw-shadow-colored: 0 0 15px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_8px_2px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 8px 2px #a271f2;
+  --tw-shadow-colored: 0 0 8px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_8px_20px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 8px 20px #a271f2;
+  --tw-shadow-colored: 0 0 8px 20px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_8px_px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 8px px #a271f2;
+  --tw-shadow-colored: 0 0 8px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_8px_3px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 8px 3px #a271f2;
+  --tw-shadow-colored: 0 0 8px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_2px_3px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 2px 3px #a271f2;
+  --tw-shadow-colored: 0 0 2px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_1px_3px_\#a271f2\]:hover:checked {
+  --tw-shadow: 0 0 1px 3px #a271f2;
+  --tw-shadow-colored: 0 0 1px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_1px_3px_\#a271f250\]:hover:checked {
+  --tw-shadow: 0 0 1px 3px #a271f250;
+  --tw-shadow-colored: 0 0 1px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_1px_px_\#a271f250\]:hover:checked {
+  --tw-shadow: 0 0 1px px #a271f250;
+  --tw-shadow-colored: 0 0 1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_1px_10px_\#a271f250\]:hover:checked {
+  --tw-shadow: 0 0 1px 10px #a271f250;
+  --tw-shadow-colored: 0 0 1px 10px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_1px_5px_\#a271f250\]:hover:checked {
+  --tw-shadow: 0 0 1px 5px #a271f250;
+  --tw-shadow-colored: 0 0 1px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_1px_5px_\#a271f210\]:hover:checked {
+  --tw-shadow: 0 0 1px 5px #a271f210;
+  --tw-shadow-colored: 0 0 1px 5px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.checked\:hover\:shadow-\[0_0_1px_10px_\#a271f210\]:hover:checked {
+  --tw-shadow: 0 0 1px 10px #a271f210;
+  --tw-shadow-colored: 0 0 1px 10px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .active\:scale-95:active {
   --tw-scale-x: .95;
   --tw-scale-y: .95;
@@ -2225,24 +2541,16 @@ video {
 }
 
 @media not all and (min-width: 900px) {
-  .max-lmd\:mb-\[2\] {
-    margin-bottom: 2;
-  }
-
-  .max-lmd\:mb-2 {
-    margin-bottom: 0.5rem;
-  }
-
   .max-lmd\:mb-3 {
     margin-bottom: 0.75rem;
   }
 
-  .max-lmd\:w-full {
-    width: 100%;
-  }
-
   .max-lmd\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .max-lmd\:w-full {
+    width: 100%;
   }
 }
 
