--- a/src/output.css
+++ b/src/output.css
@@ -582,6 +582,10 @@ video {
   left: 0px;
 }
 
+.left-\[2px\] {
+  left: 2px;
+}
+
 .left-\[50\%\] {
   left: 50%;
 }
@@ -596,14 +600,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.left-\[5px\] {
-  left: 5px;
-}
-
-.left-\[2px\] {
-  left: 2px;
 }
 
 .z-10 {
@@ -845,6 +841,14 @@ video {
   height: 14px;
 }
 
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[25px\] {
+  height: 25px;
+}
+
 .h-\[280px\] {
   height: 280px;
 }
@@ -896,22 +900,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-3\.5 {
-  height: 0.875rem;
-}
-
-.h-\[25\] {
-  height: 25;
-}
-
-.h-\[25px\] {
-  height: 25px;
-}
-
-.h-\[20px\] {
-  height: 20px;
 }
 
 .min-h-\[130px\] {
@@ -990,6 +978,10 @@ video {
   width: 200px;
 }
 
+.w-\[20px\] {
+  width: 20px;
+}
+
 .w-\[28px\] {
   width: 28px;
 }
@@ -1028,18 +1020,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-3\.5 {
-  width: 0.875rem;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-\[20px\] {
-  width: 20px;
 }
 
 .min-w-\[50px\] {
@@ -1298,10 +1278,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-\[\] {
-  border-radius: ;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1420,6 +1396,11 @@ video {
   background-color: rgb(250 245 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
@@ -1430,18 +1411,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gray-500 {
+.bg-\[\#bf1212\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
-}
-
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[gray-500\] {
-  background-color: gray-500;
+  background-color: rgb(191 18 18 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-75 {
@@ -1525,10 +1497,6 @@ video {
 
 .p-\[23px\] {
   padding: 23px;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .px-1 {
@@ -1781,6 +1749,14 @@ video {
   line-height: 1rem;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[11px\] {
+  font-size: 11px;
+}
+
 .font-\[400\] {
   font-weight: 400;
 }
@@ -2023,16 +1999,6 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.shadow-\[\] {
-  --tw-shadow-color: ;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.shadow-\[5\#a271f2\] {
-  --tw-shadow-color: 5#a271f2;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2052,12 +2018,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
-}
-
 .duration-200 {
   transition-duration: 200ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .placeholder\:text-\[\#676767\]::-moz-placeholder {
@@ -2119,43 +2085,14 @@ video {
   opacity: 0;
 }
 
-.before\:content-\[\'q\'\]::before {
-  --tw-content: 'q';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'\2714\'\]::before {
-  --tw-content: '✔';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'\@\'\]::before {
-  --tw-content: '@';
-  content: var(--tw-content);
-}
-
 .before\:content-\[\'\2713\'\]::before {
   --tw-content: '✓';
   content: var(--tw-content);
 }
 
-.before\:content-\[\]::before {
-  --tw-content: ;
-  content: var(--tw-content);
-}
-
-.checked\:right-\[2px\]:checked {
-  right: 2px;
-}
-
 .checked\:border-\[\#A271F2\]:checked {
   --tw-border-opacity: 1;
   border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
-}
-
-.checked\:bg-\[\#a99ac1\]:checked {
-  --tw-bg-opacity: 1;
-  background-color: rgb(169 154 193 / var(--tw-bg-opacity, 1));
 }
 
 .checked\:bg-\[\#a271f2\]:checked {
@@ -2189,11 +2126,6 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
-.hover\:border-\[\#A271F2\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
-}
-
 .hover\:border-\[\#a271f2\]:hover {
   --tw-border-opacity: 1;
   border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
@@ -2202,11 +2134,6 @@ video {
 .hover\:bg-\[\#7d3be2\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(125 59 226 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-\[\#E9D8FD\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(233 216 253 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-\[\#a271f2\]:hover {
@@ -2275,224 +2202,9 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.checked\:hover\:bg-red-600:hover:checked {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
-}
-
-.checked\:hover\:shadow:hover:checked {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-md:hover:checked {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[5px_5px_15px_\#a271f2\]:hover:checked {
-  --tw-shadow: 5px 5px 15px #a271f2;
-  --tw-shadow-colored: 5px 5px 15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[5px_5px_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 5px 5px 2px #a271f2;
-  --tw-shadow-colored: 5px 5px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[5px_1px_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 5px 1px 2px #a271f2;
-  --tw-shadow-colored: 5px 1px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[1px_5px_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 1px 5px 2px #a271f2;
-  --tw-shadow-colored: 1px 5px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0px_5px_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0px 5px 2px #a271f2;
-  --tw-shadow-colored: 0px 5px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0px_0px_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0px 0px 2px #a271f2;
-  --tw-shadow-colored: 0px 0px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0px_0px_20px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0px 0px 20px #a271f2;
-  --tw-shadow-colored: 0px 0px 20px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0px_0px_5px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0px 0px 5px #a271f2;
-  --tw-shadow-colored: 0px 0px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[10px_0px_5px_\#a271f2\]:hover:checked {
-  --tw-shadow: 10px 0px 5px #a271f2;
-  --tw-shadow-colored: 10px 0px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[10px_10px_5px_\#a271f2\]:hover:checked {
-  --tw-shadow: 10px 10px 5px #a271f2;
-  --tw-shadow-colored: 10px 10px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[-10px_10px_5px_\#a271f2\]:hover:checked {
-  --tw-shadow: -10px 10px 5px #a271f2;
-  --tw-shadow-colored: -10px 10px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0px_10px_5px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0px 10px 5px #a271f2;
-  --tw-shadow-colored: 0px 10px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_10px_5px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 10px 5px #a271f2;
-  --tw-shadow-colored: 0 10px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_5px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 5px #a271f2;
-  --tw-shadow-colored: 0 0 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 px #a271f2;
-  --tw-shadow-colored: 0 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 2px #a271f2;
-  --tw-shadow-colored: 0 0 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_2px__\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 2px  #a271f2;
-  --tw-shadow-colored: 0 0 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_2px_10px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 2px 10px #a271f2;
-  --tw-shadow-colored: 0 0 2px 10px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_2px_1px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 2px 1px #a271f2;
-  --tw-shadow-colored: 0 0 2px 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_2px_4px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 2px 4px #a271f2;
-  --tw-shadow-colored: 0 0 2px 4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_2px_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 2px 2px #a271f2;
-  --tw-shadow-colored: 0 0 2px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_15px_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 15px 2px #a271f2;
-  --tw-shadow-colored: 0 0 15px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_8px_2px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 8px 2px #a271f2;
-  --tw-shadow-colored: 0 0 8px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_8px_20px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 8px 20px #a271f2;
-  --tw-shadow-colored: 0 0 8px 20px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_8px_px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 8px px #a271f2;
-  --tw-shadow-colored: 0 0 8px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_8px_3px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 8px 3px #a271f2;
-  --tw-shadow-colored: 0 0 8px 3px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_2px_3px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 2px 3px #a271f2;
-  --tw-shadow-colored: 0 0 2px 3px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_1px_3px_\#a271f2\]:hover:checked {
-  --tw-shadow: 0 0 1px 3px #a271f2;
-  --tw-shadow-colored: 0 0 1px 3px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_1px_3px_\#a271f250\]:hover:checked {
-  --tw-shadow: 0 0 1px 3px #a271f250;
-  --tw-shadow-colored: 0 0 1px 3px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_1px_px_\#a271f250\]:hover:checked {
-  --tw-shadow: 0 0 1px px #a271f250;
-  --tw-shadow-colored: 0 0 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_1px_10px_\#a271f250\]:hover:checked {
-  --tw-shadow: 0 0 1px 10px #a271f250;
-  --tw-shadow-colored: 0 0 1px 10px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .checked\:hover\:shadow-\[0_0_1px_5px_\#a271f250\]:hover:checked {
   --tw-shadow: 0 0 1px 5px #a271f250;
   --tw-shadow-colored: 0 0 1px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_1px_5px_\#a271f210\]:hover:checked {
-  --tw-shadow: 0 0 1px 5px #a271f210;
-  --tw-shadow-colored: 0 0 1px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.checked\:hover\:shadow-\[0_0_1px_10px_\#a271f210\]:hover:checked {
-  --tw-shadow: 0 0 1px 10px #a271f210;
-  --tw-shadow-colored: 0 0 1px 10px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
